--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,12 +57,12 @@ layout: default
           title: '{{ post.date | date: "%B %-d, %Y" }} - Comments',
 
           // here set the options for your OAuth App
-          // My OAuth App: https://github.com/settings/applications/1194033
+          // My OAuth App: https://github.com/settings/applications/1204228
           options: {
-            owner: 'zhuanglinsheng',
-            repo: 'zhuanglinsheng.github.io',
-            clientId: '63efc892bd9cd17962b0',
-            clientSecret: 'f1a5baa5874fc7c60a17ab955220fde08a39f6ce', 
+            owner: 'hehemin',
+            repo: 'hehemin.github.io',
+            clientId: 'a98fa6d4dd8d316010a4'
+            clientSecret: 'b90d8a711c5dcf7163fecc526b0297fdf9b067d3', 
           },
         }
       })
