add-html-dynamic-title
Every time when open a blog, the title would be generated dynamicly.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 {% assign post = page %}
+<script type="text/javascript"> document.title = '{{ post.title }}' </script>
 <main class="container">
     <br>
     <article class="markdown-body">
